# faust

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  AUTHORS  AUTHORS.rst  C4-FAUST.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Changelog  Changelog.rst  LICENSE  MANIFEST.in  Makefile  README.rst  TODO  TODO.rst  environment.yml  readthedocs.yml  setup.cfg  setup.py  tox.ini
.ci/: appveyor.yml
.github/: CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
artwork/: LICENSE
docker/: docker-compose.yml
docker/docbuilder/: Dockerfile  make_docs.sh
docs/: Makefile  _dummy_keep_images.rst  authors.rst  conf.py  contributing.rst  copyright.rst  developers.rst  faq.rst  glossary.rst  index.rst  introduction.rst  make.bat  quickstart.rst  spelling_wordlist.txt
docs/_ext/: faustdocs.py  typehints.py
docs/developerguide/: index.rst  overview.rst  partition_assignor.rst
docs/getting-started/: first-steps.rst  index.rst
docs/history/: changelog-0.9.rst  changelog-1.0.rst  changelog-1.1.rst  changelog-1.10.rst  changelog-1.2.rst  changelog-1.3.rst  changelog-1.4.rst  changelog-1.5.rst  changelog-1.6.rst  changelog-1.7.rst  changelog-1.8.rst  changelog-1.9.rst  index.rst
docs/includes/: blurb.txt  code-of-conduct.txt  faq.txt  installation.txt  intro.txt  introduction.txt  kafka.txt  resources.txt  settingref.txt  tags.txt
docs/introduction/: cheatsheet.rst  design.rst  index.rst  requirements.rst  resources.rst  upcoming.rst  whatis.rst  whatiskafka.rst
docs/playbooks/: cheatsheet.rst  index.rst  leaderelection.rst  masterslave.rst  pageviews.rst  quickstart.rst  vscelery.rst  vskafka.rst
docs/reference/: faust.actors.rst  faust.agents.actor.rst  faust.agents.agent.rst  faust.agents.manager.rst  faust.agents.models.rst  faust.agents.replies.rst  faust.agents.rst  faust.app.base.rst  faust.app.router.rst  faust.app.rst  faust.app.service.rst  faust.assignor.client_assignment.rst  faust.assignor.cluster_assignment.rst  faust.assignor.copartitioned_assignor.rst  faust.assignor.leader_assignor.rst  faust.assignor.partition_assignor.rst  faust.auth.rst  faust.avro.serializers.rst  faust.avro.servers.rst  faust.avro.utils.rst  faust.bin.base.rst  faust.channels.rst  faust.cli.agents.rst  faust.cli.base.rst  faust.cli.clean_versions.rst  faust.cli.completion.rst  faust.cli.faust.rst  faust.cli.livecheck.rst  faust.cli.model.rst  faust.cli.models.rst  faust.cli.params.rst  faust.cli.reset.rst  faust.cli.send.rst  faust.cli.tables.rst  faust.cli.worker.rst  faust.codecs.rst  faust.constants.rst  faust.contrib.rst  faust.contrib.sentry.rst  faust.events.rst  (+158 more)
docs/templates/: readme.txt
docs/userguide/: actors.rst  agents.rst  application.rst  channels.rst  cli.rst  debugging.rst  deployment.rst  http.rst  index.rst  installation.rst  kafka.rst  livecheck.rst  models.rst  quickstart.rst  sensors.rst  services.rst  settings.rst  streams.rst  tables.rst  tasks.rst  testing.rst  vscelery.rst  vskafka.rst  workers.rst
examples/: bench.py  commits.py  concurrency.py  consolidate.py  hello_world.py  isolated_partitions_crashing.py  leader.py  livecheck.py  master.py  raising.py  rpc.py  service.py  simple.py  suspicious.py  tableofset.py  tabletest.py  take.py  task_queue.py  test.py  windowed_aggregation.py  withdrawals.py  word_count.py
examples/advanced/: isolated_partitions_crashing.py  rpc.py  service.py
examples/crontab/: tz_aware.py  tz_unaware.py
examples/django/: README.rst  manage.py  setup.py
examples/kubernetes/: README.md
examples/order_system/: app.py  orders.py  products.py  users.py
examples/referrals/: __init__.py  __main__.py  device_checks.py  models.py
examples/windowing/: hopping.py  tumbling.py  tumbling_current.py  tumbling_now.py
extra/bandit/: baseline.json  config.yaml
extra/macOS/: com.fauststream.worker.plist
extra/release/: sphinx2rst_config.py
extra/supervisord/: faust.conf  supervisord.conf
extra/systemd/: faust.conf  faust.service  faust.tmpfiles
extra/tools/: benchmark.py  render_configuration_reference.py  verify_ascending.py  verify_doc_defaults.py  verify_tabletest.sh  verify_tabletest_changelog.py
faust/: __init__.py  __main__.py  _coroutines.py  actors.py  app.py  auth.py  channels.py  codecs.py  constants.py  consumer.py  event.py  events.py  exceptions.py  join.py  joins.py  livecheck.py  models.py  partition_assignor.py  primitives.py  py.typed  router.py  sensors.py  stream.py  streams.py  tables.py  task.py  topics.py  topology.py  types.py  window_stores.py  windows.py  worker.py
faust/_cython/: __init__.py  streams.pyx  windows.pyx
faust/actors/: __init__.py  actor.py  models.py  replies.py
faust/agents/: __init__.py  actor.py  agent.py  manager.py  models.py  replies.py
faust/app/: __init__.py  _attached.py  base.py  router.py  service.py
faust/assignor/: __init__.py  client_assignment.py  cluster_assignment.py  copartitioned_assignor.py  leader_assignor.py  master_assignor.py  (+1 more)
requirements/: README.rst  ci.txt  default.txt  dev.txt  dist.txt  docs-plugins.txt  docs.txt  flakes.txt  optimizations.txt  pkgutils.txt  py36.txt  spell.txt  test-ci.txt  test.txt  typecheck.txt
t/: conftest.py  helpers.py
t/bench/: base.py  (+2 more)
(+446 files in other folders)
