[bumpversion]
current_version = 0.9.23
commit = true
tag = true
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<releaselevel>[a-z]+)?
serialize = 
	{major}.{minor}.{patch}{releaselevel}
	{major}.{minor}.{patch}

[metadata]
name = faust
version = attr: faust.__version__
author = attr: faust.__author__
author_email = attr: faust.__contact__
url = attr: faust.__homepage__
description = attr: faust.__doc__
long_description = file: README.rst
keywords = stream, processing, asyncio, distributed, queue, kafka
license = BSD 3-Clause License
license_file = LICENSE
classifiers = 
	Framework :: AsyncIO
	Development Status :: 4 - Beta
	License :: OSI Approved :: BSD License
	Programming Language :: Python
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Operating System :: POSIX
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Operating System :: POSIX :: BSD
	Operating System :: Microsoft :: Windows
	Topic :: System :: Networking
	Topic :: System :: Distributed Computing

[options]
zip_safe = False
include_package_data = True
packages = faust

[wheel]
universal = 1

[tool:pytest]
minversion = 3.0
testpaths = t/unit t/functional
python_classes = test_*

[flake8]
ignore = N806,N802,N801,N803,I201,D102,D104,D107,D203,D105,D213,D406,D407,D413,I202,B008
max_complexity = 11

[pep257]
ignore = D102,D104,D107,D203,D105,D213,D406,D407,D413

[mypy]
python_version = 3.6
disallow_untyped_calls = True
disallow_untyped_defs = True
check_untyped_defs = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-*]
ignore_missing_imports = True

[mypy-faust.transport.confluent]
ignore_errors = True

[bumpversion:file:faust/__init__.py]

[bumpversion:file:docs/includes/tags.txt]

[bumpversion:file:README.rst]

