[bumpversion]
current_version = 1.5.0b1
commit = true
tag = true
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<releaselevel>[a-z]+)?
serialize =
	{major}.{minor}.{patch}{releaselevel}
	{major}.{minor}.{patch}

[metadata]
license_file = LICENSE

[wheel]
universal = 1

[tool:pytest]
minversion = 3.0
testpaths = t/unit t/functional
python_classes = test_*
open_files = True

[yapf]
based_on_style = pep8
spaces_before_comment = 2
allow_multiline_dictionary_keys = True

[flake8]
ignore = N806,N802,N801,N803,I201,D102,D104,D107,D203,D105,D213,D406,D407,D413,I100,I202,B008,W504
max_complexity = 24

[pep257]
ignore = D102,D104,D107,D203,D105,D213,D406,D407,D413

[mypy]
python_version = 3.6
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_unused_configs = True
disallow_subclassing_any = False
warn_return_any = False
disallow_untyped_decorators = False
warn_incomplete_stub = False
ignore_missing_imports = True
show_error_context = True
cache_fine_grained = True
show_column_numbers = True
disallow_any_expr = False
disallow_any_unimported = False
disallow_any_decorated = False
disallow_any_generics = False
follow_imports = skip

[bumpversion:file:faust/__init__.py]

[bumpversion:file:docs/includes/tags.txt]

[bumpversion:file:README.rst]

